--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ footer{
     width: 100%;
     height: 0;
     padding: 30% 0;
-    background-image: url(../assets/images/lightgrey-line.jpeg); /*change the image to one of you choice */
+    background-image: url(../assets/images/download-3.jpg); /*change the image to one of you choice */
     background-position: center;
     background-size: 100%;
     justify-content: center;
@@ -95,9 +95,9 @@ footer{
 
 /* Extra large */
 @media screen and (max-width: 1200px) {
-    /* body {
+    * body {
       background-color: rgb(0, 255, 162);
-    } */
+    } *
 
     .flex-item{
         flex-basis: 33.33%; /*width of the box, take up a quarter of the parent's size*/
@@ -106,17 +106,17 @@ footer{
 
 /* Large */
 @media screen and (max-width: 992px) {
-    /* body {
+    * body {
       background-color: rgb(255, 81, 0);
-    } */
+    } *
 
 }
 
 /* Medium */
 @media screen and (max-width: 768px) {
-    /* body {
+    * body {
       background-color: rgb(255, 0, 191);
-    } */
+    } *
 
     .flex-item{
         flex-basis: 50%; /*width of the box, take up a quarter of the parent's size*/
@@ -125,9 +125,9 @@ footer{
 
 /* Small */
 @media screen and (max-width: 576px) {
-    /* body {
+    * body {
       background-color: blue;
-    } */
+    } *
 
     .flex-item{
         flex-basis: 100%; /*width of the box, take up a quarter of the parent's size*/
